--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -4,6 +4,31 @@ pageRef = "/"
 weight = 10
 
 [[main]]
+name = "Books"
+pageRef = "/books"
+weight = 20
+
+[[main]]
+name = "Unpublished"
+pageRef = "/unpublished"
+weight = 30
+
+[[main]]
+name = "Publications"
+pageRef = "/publications"
+weight = 40
+
+[[main]]
+name = "Gallery"
+pageRef = "/gallery"
+weight = 50
+
+[[main]]
+name = "Articles"
+pageRef = "/articles"
+weight = 60
+
+[[main]]
 name = "Language"
 weight = 100
 identifier = "language-switcher"
