feat: Add inline document content and enable raw HTML rendering

--- a/hugo.toml
+++ b/hugo.toml
@@ -30,3 +30,8 @@ defaultContentLanguage = 'en'
   ShowCodeCopyButtons = true
   ShowToc = true
   TocOpen = true
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
